<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfileActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_blue"
        android:theme="@style/MyToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="Profile Screen"
        app:titleTextColor="@color/purple_700"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/baseline_person_24"
        app:civ_border_width="@dimen/dp_2"
        app:civ_border_color="@color/black"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_fname"
        style="@style/TextInputLayout_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_first_name"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile"
        app:startIconDrawable="@drawable/baseline_person_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_lname"
        style="@style/TextInputLayout_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_last_name"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_fname"
        app:startIconDrawable="@drawable/baseline_person_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        style="@style/TextInputLayout_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_lname"
        app:startIconDrawable="@drawable/baseline_email_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        style="@style/TextInputLayout_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_email"
        app:startIconDrawable="@drawable/baseline_lock_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_gender"
        style="@style/TextInputLayout_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_gender"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_password"
        app:startIconDrawable="@drawable/baseline_transgender_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/button_dob"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="@id/guideline_left"-->
<!--        app:layout_constraintEnd_toEndOf="@id/guideline_right"-->
<!--        app:layout_constraintTop_toBottomOf="@id/textInputLayout_gender"-->
<!--        android:background="@color/white"-->
<!--        android:drawableTint="@color/grey"-->
<!--        android:layout_marginTop="@dimen/dp_10"-->
<!--        android:textColorHint="@color/black"-->
<!--        android:drawableStart="@drawable/baseline_calendar_month_30"-->
<!--        android:drawableEnd="@drawable/baseline_arrow_drop_down_30"-->
<!--        android:hint="@string/label_select_dob"-->
<!--        android:gravity="left|center"-->
<!--        android:padding="@dimen/dp_10"/>-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_dob"
        style="@style/TextInputLayout_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_dob"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_gender"
        app:startIconDrawable="@drawable/baseline_calendar_month_30"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_age"
        style="@style/TextInputLayout_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_age"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_dob"
        app:startIconDrawable="@drawable/baseline_perm_contact_calendar_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_save"
        android:background="@drawable/white_btn"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_age" />

    <Button
        android:layout_marginTop="@dimen/dp_15"
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel"
        android:background="@drawable/white_btn"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_age"/>


</androidx.constraintlayout.widget.ConstraintLayout>