<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <View
        android:id="@+id/triangleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/subtract"
        app:layout_constraintBottom_toTopOf="@id/guideline_top2"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_signup"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/sp_35"
        app:layout_constraintBottom_toTopOf="@id/guideline_top2"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:layout_marginBottom="@dimen/dp_15"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_fname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_first_name"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/purple_700"
        app:boxBackgroundColor="@color/purple_700"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/guideline_top2"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_lname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_last_name"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/purple_700"
        android:layout_marginTop="@dimen/dp_5"
        app:boxBackgroundColor="@color/purple_700"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_fname"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundMode="outline"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:boxStrokeColor="@color/purple_700"
        android:layout_marginTop="@dimen/dp_5"
        app:boxBackgroundColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_lname"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundMode="outline"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:boxStrokeColor="@color/purple_700"
        android:layout_marginTop="@dimen/dp_5"
        app:boxBackgroundColor="@color/purple_700"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_email"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_password">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:buttonTint="#3A2050"
            android:padding="@dimen/dp_10"
            android:text="@string/label_male"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:buttonTint="@color/dark_purple"
            android:padding="@dimen/dp_10"
            android:text="@string/label_female"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_18" />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_5"
        android:textColorHint="@color/grey"
        android:drawableStart="@drawable/baseline_calendar_month_30"
        android:drawableTint="@color/grey"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_30"
        android:hint="@string/label_select_dob"
        android:gravity="left|center"
        android:padding="2dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/purple_700"
        app:startIconDrawable="@drawable/baseline_perm_contact_calendar_24"
        android:hint="@string/label_age"
        app:hintTextColor="@color/black"
        android:visibility="invisible"
        app:boxBackgroundColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/button_dob">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_signup"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/white_btn"
        android:layout_margin="@dimen/dp_10"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_age"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"/>











</androidx.constraintlayout.widget.ConstraintLayout>